# CogniBench

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  openai_cache.db  overview.md  pyproject.toml  roadmap.md  run_single_evaluation.py
.devcontainer/: devcontainer.json
api/: main.py  schemas.py
cognibench_agent/: app.py  constants.py  ui_file_upload.py
core/: __init__.py  batch_processor.py  config.py  constants.py  evaluation_runner.py  log_setup.py  output_writer.py  postprocessing.py  preprocessing.py  prompt_templates.py  response_parser.py  workflow.py
core/llm_clients/: __init__.py  base.py  openai_client.py
core/schemas/: structured_response_schema.json
data/: evaluations.json  evaluations.jsonl  ideal_responses.json  model_responses.json  prompts.json
docs/: backend_architecture.md  evaluation_output_schema.md  frontend_design.md  overview.md  prompt_checklist.md  ui_enhancement.md
prompts/: Math-L1-v0.2.txt  Math-L1-v1.0-robust.txt  full_l1_v0.2.txt
prompts/judging/: Math-L1-Judging-v1.0.txt  Math-L1-Judging-v2.0.txt  Math-L1-judge-v1.0.txt
prompts/structuring/: Math-L1-structuring-v1.0.txt  Math-L1-structuring-v2.0.txt
scripts/: ingest_rlhf_data.py  prepare_judging_batch.py  retrieve_batch_results.py  review_flagged_evals.py  run_batch_evaluation.py  run_single_evaluation.py  run_structuring.py  show_evaluation_data.py  validate_responses.py
streamlit_app/: app.py
tests/core/: test_batch_processor.py  test_postprocessing.py  test_preprocessing.py  test_response_parser.py  test_workflow.py
(+5 files in other folders)
